--- a/lang-pr.jsonc
+++ b/lang-pr.jsonc
@@ -1,5 +1,4 @@
 {
-	// language names; all except the current language should be followed by the language name in its own language
 	"language-en": "English",
 	"language-cs": "Czech (Čeština)",
 	"language-de": "German (Deutsch)",
@@ -11,8 +10,6 @@
 	"language-pt": "Portuguese, Brazilian (Português, Brasileiro)",
 	"language-ru": "Russian (Русский)",
 	"language-zh": "Chinese, Simplified (简体中文)",
-	
-	// high-level UI tab labels
 	"edsy": "EDSY",
 	"ui-shipyard": "Shipyard",
 	"ui-outfitting": "Outfitting",
@@ -21,8 +18,6 @@
 	"ui-stored": "Stored",
 	"ui-retrofit": "Retrofit",
 	"ui-compare": "Compare",
-	
-	// shipyard labels
 	"ui-shipyard-build-label": "Build",
 	"ui-shipyard-build-desc": "Stored build label",
 	"ui-shipyard-ship-label": "Ship",
@@ -103,31 +98,25 @@
 	"ui-shipyard-dps-caustic-desc": "Caustic DPS portion",
 	"ui-shipyard-copy-live": "Copy from Live Site",
 	"ui-shipyard-copy-live-confirm": "Copy builds from live site storage?\nAny matching beta or dev site builds will be overwritten.",
-	
-	// slot group labels and abbreviations
 	"ui-slotgroup-hardpoint": "Hardpoints",
 	"ui-slotgroup-utility": "Utility Mounts",
 	"ui-slotgroup-component": "Core Internal",
 	"ui-slotgroup-military": "Military",
 	"ui-slotgroup-internal": "Optional Internal",
-	
-	// slot size/type abbreviations
-	"ui-slot-size-0-abbr": "U", /* utility */
-	"ui-slot-size-1-abbr": "S", /* small */
-	"ui-slot-size-2-abbr": "M", /* medium */
-	"ui-slot-size-3-abbr": "L", /* large */
-	"ui-slot-size-4-abbr": "H", /* huge */
-	"ui-slot-component-0-abbr": "BH", /* bulkhead */
-	"ui-slot-component-1-abbr": "PP", /* power plant */
-	"ui-slot-component-2-abbr": "TH", /* thruster */
-	"ui-slot-component-3-abbr": "FD", /* frame shift drive */
-	"ui-slot-component-4-abbr": "LS", /* life support */
-	"ui-slot-component-5-abbr": "PD", /* power distributor */
-	"ui-slot-component-6-abbr": "SS", /* sensor suite */
-	"ui-slot-component-7-abbr": "FT", /* fuel tank */
-	"ui-slot-military-abbr": "MC", /* military compartment */
-	
-	// outfitting module browser tab labels
+	"ui-slot-size-0-abbr": "U",
+	"ui-slot-size-1-abbr": "S",
+	"ui-slot-size-2-abbr": "M",
+	"ui-slot-size-3-abbr": "L",
+	"ui-slot-size-4-abbr": "H",
+	"ui-slot-component-0-abbr": "BH",
+	"ui-slot-component-1-abbr": "PP",
+	"ui-slot-component-2-abbr": "TH",
+	"ui-slot-component-3-abbr": "FD",
+	"ui-slot-component-4-abbr": "LS",
+	"ui-slot-component-5-abbr": "PD",
+	"ui-slot-component-6-abbr": "SS",
+	"ui-slot-component-7-abbr": "FT",
+	"ui-slot-military-abbr": "MC",
 	"ui-modules-all": "ALL",
 	"ui-modules-stored": "STR",
 	"ui-modules-hardpoint": "HPT",
@@ -136,8 +125,6 @@
 	"ui-modules-military": "MIL",
 	"ui-modules-optional": "OPT",
 	"ui-modules-slot": "SLOT",
-	
-	// outfitting slots popout menu labels
 	"ui-slots-show": "SHOW",
 	"ui-slots-show-mass": "Mass",
 	"ui-slots-show-power": "Power",
@@ -147,8 +134,6 @@
 	"ui-slots-operations-import": "Import...",
 	"ui-slots-operations-export": "Export...",
 	"ui-slots-operations-clone": "Clone Discounts",
-	
-	// outfitting slots labels
 	"ui-slots-name": "Name:",
 	"ui-slots-id": "ID:",
 	"ui-slots-export": "Export:",
@@ -164,13 +149,9 @@
 	"ui-slots-price-abbr": "Price",
 	"ui-slots-price-desc": "Hull or module price (in credits); for hulls, this excludes all stock modules",
 	"ui-slots-restricted": "This slot is restricted to specific module types.",
-	
-	// outfitting details labels
 	"ui-details-discount-actual": "Actual",
 	"ui-details-discount-free": "FREE",
 	"ui-details-blueprint-grade": "Grade",
-	
-	// button labels
 	"ui-button-back": "Back",
 	"ui-button-cancel": "Cancel",
 	"ui-button-details": "Details",
@@ -180,8 +161,6 @@
 	"ui-button-okay": "Okay",
 	"ui-button-remove": "Remove",
 	"ui-button-replace": "Replace",
-	
-	// outfitting stats panels labels
 	"ui-stats-show": "SHOW STATS",
 	"ui-stats-hide": "HIDE STATS",
 	"ui-stats-totals-abbr": "TTL",
@@ -357,8 +336,6 @@
 	"ui-stats-price-rebuy-desc": "Insurance rebuy price",
 	"ui-stats-price-buy-abbr": "BUY",
 	"ui-stats-price-buy-desc": "Total buy price",
-	
-	// retrofit analysis labels
 	"ui-retrofit-builds": "Builds",
 	"ui-retrofit-target-build": "Target Build",
 	"ui-retrofit-base-build": "Base Build",
@@ -409,8 +386,6 @@
 	"ui-retrofit-action-conv-abbr": "Conv",
 	"ui-retrofit-action-eng-abbr": "Eng",
 	"ui-retrofit-action-exp-abbr": "Exp",
-	
-	// options labels
 	"ui-options": "Options",
 	"ui-options-insurance": "Insurance Level",
 	"ui-options-insurance-desc": "Select your insurance coverage level to calculate rebuy costs.",
@@ -455,15 +430,11 @@
 	"ui-options-backup-prompt": "Below is a JSON object encoding all stored builds, modules, and other preferences, suitable for backup or transfer to another device or browser.",
 	"ui-options-restore": "Restore Data",
 	"ui-options-restore-desc": "Import stored builds, modules, and other preferences that were previously exported from another device or browser.",
-	
-	// help labels
 	"ui-help-contact": "Contact Me",
 	"ui-help-contact-discord": "discord",
 	"ui-help-contact-forum": "forum",
 	"ui-help-contact-reddit": "reddit",
 	"ui-help-contact-email": "email",
-	
-	// export popup labels
 	"ui-export-build": "Build",
 	"ui-export-url": "URL",
 	"ui-export-short": "Short",
@@ -474,8 +445,6 @@
 	"ui-export-update-inara": "Update Inara",
 	"ui-export-edomh": "EDOMH",
 	"ui-export-generating": "Generating ...",
-	
-	// import popup labels
 	"ui-import-header1-desc": "You can import your current ship (and any others used today) directly from the Frontier API.",
 	"ui-import-header2-desc": "You must log in with Frontier to grant access, but EDSY will never see your password.",
 	"ui-import-cmdr": "CMDR",
@@ -516,8 +485,6 @@
 	"ui-import-failed": "Import failed:",
 	"ui-import-warning-invalid": "Some choices were invalid; hover over the warning icon(s) for details.",
 	"ui-import-error-duplicate": "Cannot import multiple builds with the same label.",
-	
-	// info/error messages
 	"message-version": "A new version is available!",
 	"message-version-desc": "Click Okay to update, or force-refresh in your browser (ctrl+F5, Apple+r, Command+r, etc)</h3>",
 	"message-hash-errors": "Build hash loaded with errors",
@@ -528,8 +495,6 @@
 	"message-module-save": "Choose a label for the stored module",
 	"message-module-rename": "Choose a new label for the stored module",
 	"message-module-overwrite-builtin": "Cannot overwrite a builtin module",
-	
-	// miscellaneous text
 	"available": "available",
 	"boost": "boost",
 	"deployed": "deployed",
@@ -541,19 +506,17 @@
 	"n-a": "N/A",
 	"none": "none",
 	"note-empty": "(empty)",
-	"note-empty-slot": "(Empty Slot)", /* for annotating empty slots */
-	"note-legacy": "(legacy)", /* for annotating legacy engineering */
-	"option-current-build": "(Current Build)", /* for build selectors, to use the currently loaded build */
-	"option-no-blueprint": "(No Blueprint)", /* for blueprint selectors, to reset to none */
-	"option-no-expeffect": "(No Experimental Effect)", /* for expeffect selectors, to reset to none */
-	"option-no-module": "(No Module)", /* for module selectors, to choose nothing */
-	"option-stock": "(Stock)", /* for stored build/loadout selectors, to reset to stock */
-	"option-stock-ship": "(Stock Ship)", /* for build selectors, to use the stock ship build */
+	"note-empty-slot": "(Empty Slot)",
+	"note-legacy": "(legacy)",
+	"option-current-build": "(Current Build)",
+	"option-no-blueprint": "(No Blueprint)",
+	"option-no-expeffect": "(No Experimental Effect)",
+	"option-no-module": "(No Module)",
+	"option-stock": "(Stock)",
+	"option-stock-ship": "(Stock Ship)",
 	"retracted": "retracted",
 	"unknown": "Unknown!",
 	"unladen": "unladen",
-	
-	// measurement units
 	"unit-credits-abbr": "Cr",
 	"unit-credits-per-ton-abbr": "Cr/T",
 	"unit-degrees-abbr": "°",
@@ -574,8 +537,6 @@
 	"unit-seconds-abbr": "s",
 	"unit-tons-abbr": "T",
 	"unit-tons-per-second-abbr": "T/s",
-	
-	// interpolated values
 	"interp-number": "{number}",
 	"interp-grade-abbr-number": "G{number}",
 	"interp-index-abbr-number": "#{number}",
@@ -597,8 +558,6 @@
 	"interp-number-added-a-b": "{number} ({a} + {b})",
 	"interp-version-abcd": "v{a}.{b}.{c}{rc}{d}",
 	"interp-updated-date": "updated {date}",
-	
-	// game ship names
 	"ship-1": "Sidewinder",
 	"ship-2": "Cobra Mk III",
 	"ship-3": "Imperial Clipper",
@@ -637,8 +596,6 @@
 	"ship-53": "Dolphin",
 	"ship-61": "Federal Corvette",
 	"ship-62": "Imperial Cutter",
-	
-	// game module group names
 	"mtype-cbh": "Bulkheads",
 	"mtype-cch": "Cargo Hatches",
 	"mtype-cfsd": "Frame Shift Drives",
@@ -705,8 +662,6 @@
 	"mtype-upd": "Point Defence",
 	"mtype-upwa": "Pulse Wave Analyser",
 	"mtype-usb": "Shield Boosters",
-	
-	// game module names
 	"module-150": "Estante de carga",
 	"module-250": "Estante de carga",
 	"module-350": "Estante de carga",
@@ -855,8 +810,6 @@
 	"module-88140": "Canhão Gauss",
 	"module-88143": "Carregador de plasma",
 	"module-88146": "Canhão de fragmentos",
-	
-	// game blueprint names
 	"blueprint-cbh_br": "Blindagem de resistência a Explosões",
 	"blueprint-cbh_hd": "Blindagem Pesada",
 	"blueprint-cbh_kr": "Blindagem de Resistência Cinética",
@@ -921,8 +874,6 @@
 	"blueprint-wpn_rf": "Modificação de Disparo Rápido",
 	"blueprint-wpn_sr": "Disparo de Curto Alcance",
 	"blueprint-wpn_stu": "Encaixe Robusto",
-	
-	// game experimental effect names and special effect descriptions
 	"expeffect-cbhx_ap": "Revestimento inclinado",
 	"expeffect-cbhx_dp": "Revestimento espesso",
 	"expeffect-cbhx_lp": "Revestimento em camadas",
@@ -1039,8 +990,6 @@
 	"expeffect-wpnx_thve-special": "Heat reduced when striking a target",
 	"expeffect-wpnx_tlb": "Quebra de Trava de Alvo",
 	"expeffect-wpnx_tlb-special": "Target loses target lock",
-	
-	// game ship/module attribute names, abbreviations, and long descriptions
 	"attr-absres": "Absolute Resistance",
 	"attr-absres-abbr": "AbR",
 	"attr-absres-desc": "Resistance to absolute/collision damage",
@@ -1557,8 +1506,6 @@
 	"attr-yaw": "Yaw Speed",
 	"attr-yaw-abbr": "Yaw",
 	"attr-yaw-desc": "Base yaw speed (in degrees per second) with outfitting mass equal to thruster optimal mass",
-	
-	// build stat names and abbreviations
 	"stat-burst-dps": "Burst DPS",
 	"stat-cabins": "Cabins",
 	"stat-cargo": "Cargo",
@@ -1568,16 +1515,12 @@
 	"stat-range": "Range",
 	"stat-rebuy": "Re-Buy",
 	"stat-speed": "Speed",
-	
-	// game material type names and abbreviations
 	"mattype-enc": "Encoded",
 	"mattype-enc-abbr": "Enc",
 	"mattype-mfc": "Manufactured",
 	"mattype-mfc-abbr": "Mfc",
 	"mattype-raw": "Raw",
 	"mattype-raw-abbr": "Raw",
-	
-	// game material names
 	"material-abcoemda": "Dados de emissão compactos anormais",
 	"material-abshpaan": "Análise de padrão de escudos aberrante",
 	"material-adenca": "Encriptadores adaptativos capturados",
@@ -1715,15 +1658,11 @@
 	"material-ytt": "Ítrio",
 	"material-zin": "Zinco",
 	"material-zir": "Zircônio",
-	
-	// game faction names
 	"faction-alliance": "Alliance",
 	"faction-empire": "Empire",
 	"faction-federation": "Federation",
 	"faction-independent": "Independent",
 	"faction-thargoid": "Thargoid",
-	
-	// game faction rank names
 	"rank-empire-1": "Outsider",
 	"rank-empire-2": "Serf",
 	"rank-empire-3": "Master",
@@ -1752,8 +1691,6 @@
 	"rank-federation-12": "Rear Admiral",
 	"rank-federation-13": "Vice Admiral",
 	"rank-federation-14": "Admiral",
-	
-	// game ship/slot size names and abbreviations
 	"size-0": "Utility",
 	"size-0-abbr": "U",
 	"size-1": "Small",
@@ -1764,8 +1701,6 @@
 	"size-3-abbr": "L",
 	"size-4": "Huge",
 	"size-4-abbr": "H",
-	
-	// game letter ratings
 	"rating-a": "A",
 	"rating-b": "B",
 	"rating-c": "C",
@@ -1776,22 +1711,16 @@
 	"rating-h": "H",
 	"rating-i": "I",
 	"rating-j": "J",
-	
-	// game hardpoint mount types and abbreviations
 	"mount-f": "Fixed",
 	"mount-f-abbr": "F",
 	"mount-g": "Gimballed",
 	"mount-g-abbr": "G",
 	"mount-t": "Turreted",
 	"mount-t-abbr": "T",
-	
-	// game missile types and abbreviations
 	"missile-d": "Dumbfire",
 	"missile-d-abbr": "D",
 	"missile-s": "Seeker",
 	"missile-s-abbr": "S",
-	
-	// game cabin class types and abbreviations
 	"cabincls-p": "Prison",
 	"cabincls-p-abbr": "P",
 	"cabincls-e": "Economy",
@@ -1802,6 +1731,5 @@
 	"cabincls-f-abbr": "F",
 	"cabincls-l": "Luxury",
 	"cabincls-l-abbr": "L",
-	
 	"": ""
 }
