fixed various translation file errors from broken Crowdin auto-translations

--- a/lang-cs.jsonc
+++ b/lang-cs.jsonc
@@ -1,6 +1,6 @@
 {
-  "language-en": "English",
-  "language-cs": "Czech (Čeština)",
+  "language-en": "English (English)",
+  "language-cs": "Čeština",
   "language-de": "German (Deutsch)",
   "language-es": "Spanish (Español)",
   "language-fr": "French (Français)",
