--- a/lang-hu.jsonc
+++ b/lang-hu.jsonc
@@ -1,10 +1,10 @@
 {
-  "language-en": "English",
+  "language-en": "English (English)",
   "language-cs": "Czech (Čeština)",
   "language-de": "German (Deutsch)",
   "language-es": "Spanish (Español)",
   "language-fr": "French (Français)",
-  "language-hu": "Hungarian (Magyar)",
+  "language-hu": "Magyar",
   "language-it": "Italian (Italiano)",
   "language-ja": "Japanese (日本語)",
   "language-pt": "Portuguese, Brazilian (Português, Brasileiro)",
