--- a/lang-ja.jsonc
+++ b/lang-ja.jsonc
@@ -1,12 +1,12 @@
 {
-  "language-en": "English",
+  "language-en": "English (English)",
   "language-cs": "Czech (Čeština)",
   "language-de": "German (Deutsch)",
   "language-es": "Spanish (Español)",
   "language-fr": "French (Français)",
   "language-hu": "Hungarian (Magyar)",
   "language-it": "Italian (Italiano)",
-  "language-ja": "Japanese (日本語)",
+  "language-ja": "日本語",
   "language-pt": "Portuguese, Brazilian (Português, Brasileiro)",
   "language-ru": "Russian (Русский)",
   "language-zh": "Chinese, Simplified (简体中文)",
