added Sub-surface Extraction Missile translation to all language files

--- a/lang-de.jsonc
+++ b/lang-de.jsonc
@@ -779,6 +779,7 @@
   "module-80190": "Minenwerfer",
   "module-80191": "Schockmine",
   "module-81127": "Verdr.-Rakete",
+  "module-81229": "Sub-surface Extraction Missile",
   "module-81140": "Abbaulaser",
   "module-81141": "Abrasionsblaster",
   "module-81141-abbr": "Abrasions",
