--- a/lang-es.jsonc
+++ b/lang-es.jsonc
@@ -779,6 +779,7 @@
   "module-80190": "Lanzaminas",
   "module-80191": "Mina impacto",
   "module-81127": "Misil de desplazamiento",
+  "module-81229": "Sub-surface Extraction Missile",
   "module-81140": "Láser de minería",
   "module-81141": "Destructor de abrasión",
   "module-81141-abbr": "Abrasión",
