--- a/lang-fr.jsonc
+++ b/lang-fr.jsonc
@@ -779,6 +779,7 @@
   "module-80190": "Lance-mines",
   "module-80191": "Mine électrique",
   "module-81127": "Missile à ch. pénétrante",
+  "module-81229": "Sub-surface Extraction Missile",
   "module-81140": "Laser minier",
   "module-81141": "Surfaceur abrasif",
   "module-81141-abbr": "Abrasif",
