--- a/lang-pt.jsonc
+++ b/lang-pt.jsonc
@@ -779,6 +779,7 @@
   "module-80190": "Lança minas",
   "module-80191": "Mina de impacto",
   "module-81127": "Míssil Desl.",
+  "module-81229": "Sub-surface Extraction Missile",
   "module-81140": "Laser de mineração",
   "module-81141": "Detonador de abrasão",
   "module-81141-abbr": "Abrasão",
