--- a/lang-ru.jsonc
+++ b/lang-ru.jsonc
@@ -779,6 +779,7 @@
   "module-80190": "Установщик мин",
   "module-80191": "Шоковая мина",
   "module-81127": "Sub-surface Displacement Missile",
+  "module-81229": "Sub-surface Extraction Missile",
   "module-81140": "Проходочный лазер",
   "module-81141": "Абразивный бластер",
   "module-81141-abbr": "Abrasion",
