--- a/lang-ja.jsonc
+++ b/lang-ja.jsonc
@@ -779,6 +779,7 @@
   "module-80190": "Mine Launcher",
   "module-80191": "Shock Mine Launcher",
   "module-81127": "Sub-surface Displacement Missile",
+  "module-81229": "Sub-surface Extraction Missile",
   "module-81140": "Mining Laser",
   "module-81141": "Abrasion Blaster",
   "module-81141-abbr": "Abrasion",
