added translation for Decorative Pink blueprint, fixed typos in a few keys

--- a/lang-de.jsonc
+++ b/lang-de.jsonc
@@ -882,6 +882,7 @@
 	"blueprint-ct_dt": "Aggressives Antriebstuning",
 	"blueprint-ct_str": "Antriebsstärkung",
 	"blueprint-dec_g": "Decorative Green",
+	"blueprint-dec_p": "Decorative Pink",
 	"blueprint-dec_r": "Decorative Red",
 	"blueprint-dec_y": "Decorative Yellow",
 	"blueprint-ifsdi_eca": "Expanded Capture Arc",
