--- a/lang-es.jsonc
+++ b/lang-es.jsonc
@@ -882,6 +882,7 @@
 	"blueprint-ct_dt": "Modificación de motor sucio",
 	"blueprint-ct_str": "Fortalecimiento de motor",
 	"blueprint-dec_g": "Decorative Green",
+	"blueprint-dec_p": "Decorative Pink",
 	"blueprint-dec_r": "Decorative Red",
 	"blueprint-dec_y": "Decorative Yellow",
 	"blueprint-ifsdi_eca": "Arco de captura de interdictor de MDD extendido",
