--- a/lang-fr.jsonc
+++ b/lang-fr.jsonc
@@ -882,6 +882,7 @@
 	"blueprint-ct_dt": "Optimisation de réacteur détériorante",
 	"blueprint-ct_str": "Renforcement du réacteur",
 	"blueprint-dec_g": "Decorative Green",
+	"blueprint-dec_p": "Decorative Pink",
 	"blueprint-dec_r": "Decorative Red",
 	"blueprint-dec_y": "Decorative Yellow",
 	"blueprint-ifsdi_eca": "Intercepteur FSD à angle de capture augmenté",
