--- a/lang-pt.jsonc
+++ b/lang-pt.jsonc
@@ -882,6 +882,7 @@
 	"blueprint-ct_dt": "Ajuste de Motor Sujo",
 	"blueprint-ct_str": "Reforçamento do Motor",
 	"blueprint-dec_g": "Decorative Green",
+	"blueprint-dec_p": "Decorative Pink",
 	"blueprint-dec_r": "Decorative Red",
 	"blueprint-dec_y": "Decorative Yellow",
 	"blueprint-ifsdi_eca": "Arco de Captura do Interditor de MDD Expandido",
