--- a/lang-ru.jsonc
+++ b/lang-ru.jsonc
@@ -884,6 +884,7 @@
 	"blueprint-ct_dt": "«Грязная» донастройка двигателя",
 	"blueprint-ct_str": "Усиление двигателя",
 	"blueprint-dec_g": "Decorative Green",
+	"blueprint-dec_p": "Decorative Pink",
 	"blueprint-dec_r": "Decorative Red",
 	"blueprint-dec_y": "Decorative Yellow",
 	"blueprint-ifsdi_eca": "FSD-перехватчик с расширенной дугой захвата",
