--- a/lang-zh.jsonc
+++ b/lang-zh.jsonc
@@ -882,6 +882,7 @@
 	"blueprint-ct_dt": "Dirty Tuning",
 	"blueprint-ct_str": "Strengthening",
 	"blueprint-dec_g": "Decorative Green",
+	"blueprint-dec_p": "Decorative Pink",
 	"blueprint-dec_r": "Decorative Red",
 	"blueprint-dec_y": "Decorative Yellow",
 	"blueprint-ifsdi_eca": "Expanded Capture Arc",
