updated messages to clarify that Coriolis format will not be supported

--- a/lang-cs.jsonc
+++ b/lang-cs.jsonc
@@ -482,7 +482,7 @@
 	"ui-import-authorize": "Authorize Account",
 	"ui-import-authorize-another": "Authorize Another Account",
 	"ui-import-footer-desc": "You can also import loadout(s) by pasting them below or dropping a file onto the page.",
-	"ui-import-textbox-notes": "Supported import formats include:\n\n* EDSY URL(s)\n* EDSY backup export\n* SLEF JSON data (from Inara, Coriolis, etc)\n* Journal JSONL data with \"Loadout\" event(s)\n* Frontier API Profile JSON data (via EDAPI, EDCE, EDMC, etc)\n",
+	"ui-import-textbox-notes": "Supported import formats include:\n\n* EDSY URL(s)\n* EDSY backup export\n* SLEF JSON data (from Inara, etc)\n* Journal JSONL data with \"Loadout\" event(s)\n* Frontier API Profile JSON data (via EDAPI, EDCE, EDMC, etc)\n",
 	"ui-import-error-connector": "EDSY-FDAPI connector error",
 	"ui-import-error-redirect": "EDSY's API access for this account has expired or been reset.",
 	"ui-import-reauthorize": "Re-Authorize Account",
@@ -507,7 +507,7 @@
 	"ui-import-warning-inara": "Inara builds may have small inaccuracies in engineered module attributes",
 	"ui-import-warning-fdapi": "These FDAPI builds may erroneously show legacy blueprints on all engineered modules",
 	"ui-import-error-text": "Plain text import is not yet implemented",
-	"ui-import-error-coriolis": "Coriolis format import is not supported; use SLEF instead",
+	"ui-import-error-coriolis": "Coriolis' internal format is not supported; SLEF format is designed for interchange between applications",
 	"ui-import-error-unrecognized-json": "Unrecognized JSON format",
 	"ui-import-error-invalid-json": "Invalid JSON encoding",
 	"ui-import-error-truncated": "URL likely truncated by Windows and/or Internet Explorer",
